# design-research

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  examples.yml  workflow.yml
docs/: README.md  api.rst  automation_baseline.rst  compatibility.rst  concepts.rst  conf.py  dependencies_and_extras.rst  end_to_end_walkthrough.rst  index.rst  installation.rst  philosophy.rst  prompt_framing_study.rst  quickstart.rst  typical_workflow.rst
docs/_static/: custom.css
examples/: README.md  _future_stack.py  _stack_interop.py  _workspace_bootstrap.py  basic_usage.py  end_to_end_walkthrough.py  mechanical_design_stack.py  prompt_framing_study.py  pump_and_battery_design_portfolio.py  real_stack_interoperability.py  student_laptop_design_study.py
scripts/: _example_support.py  check_docs_consistency.py  check_example_api_coverage.py  generate_examples_metrics.py  run_examples.py  update_release_readme.py
src/design_research/: __init__.py  _experiments_compat.py  _lazy.py  _version.py  agents.py  analysis.py  experiments.py  problems.py
tests/: _subprocess_support.py  test_example_tooling.py  test_examples.py  test_family_smoke.py  test_internals.py  test_public_api.py  test_wrappers.py
