[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "design-research"
version = "0.1.0"
description = "Thin umbrella package for the CMU Design Research Collective ecosystem"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "The Design Research Collective" }]
maintainers = [{ name = "Christopher C. McComb", email = "ccm@cmu.edu" }]
keywords = ["design", "research", "agents", "experiments", "analysis", "problems"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "design-research-problems==0.2.0",
  "design-research-agents==0.2.0",
  "design-research-experiments==0.1.0",
  "design-research-analysis==0.1.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.10,<2",
  "pydata-sphinx-theme>=0.16,<1",
  "pre-commit>=3.7,<5",
  "pytest>=8.2,<9",
  "pytest-cov>=7.0,<8",
  "ruff>=0.6.0,<1",
  "sphinx>=7.4,<9",
  "sphinx-copybutton>=0.5,<1",
  "twine>=5.1,<7",
]

[project.urls]
Homepage = "https://cmudrc.github.io/design-research/"
Documentation = "https://cmudrc.github.io/design-research/"
Repository = "https://github.com/cmudrc/design-research"
Issues = "https://github.com/cmudrc/design-research/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
design_research = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "examples", "scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]

[tool.mypy]
packages = ["design_research"]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
  "design_research_problems",
  "design_research_problems.*",
  "design_research_agents",
  "design_research_agents.*",
  "design_research_experiments",
  "design_research_experiments.*",
  "design_research_analysis",
  "design_research_analysis.*",
]
ignore_missing_imports = true
