[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "design-research"
dynamic = ["version"]
description = "Thin umbrella package for the CMU Design Research Collective ecosystem"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "The Design Research Collective" }]
maintainers = [{ name = "Christopher C. McComb", email = "ccm@cmu.edu" }]
keywords = ["design", "research", "agents", "experiments", "analysis", "problems"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "design-research-problems==0.2.1",
  "design-research-agents==0.3.0",
  "design-research-experiments==0.1.2",
  "design-research-analysis==0.1.1",
]

[project.optional-dependencies]
dev = [
  "build>=1.4.2,<2",
  "mypy>=1.20.0,<2",
  "pydata-sphinx-theme>=0.16.1,<1",
  "pre-commit>=4.5.1,<5",
  "pytest>=9.0.2,<10",
  "pytest-cov>=7.1.0,<8",
  "ruff>=0.15.8,<1",
  "sphinx>=9.1.0,<10",
  "sphinx-copybutton>=0.5.2,<1",
  "twine>=6.2.0,<7",
]

[project.urls]
Homepage = "https://cmudrc.github.io/design-research/"
Documentation = "https://cmudrc.github.io/design-research/"
Repository = "https://github.com/cmudrc/design-research"
Issues = "https://github.com/cmudrc/design-research/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "design_research._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
design_research = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "examples", "scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]

[tool.mypy]
packages = ["design_research"]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
  "design_research_problems",
  "design_research_problems.*",
  "design_research_agents",
  "design_research_agents.*",
  "design_research_experiments",
  "design_research_experiments.*",
  "design_research_analysis",
  "design_research_analysis.*",
]
ignore_missing_imports = true
