[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "design-research"
dynamic = ["version"]
description = "Thin umbrella package for the CMU Design Research Collective ecosystem"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "The Design Research Collective" }]
maintainers = [{ name = "Christopher C. McComb", email = "ccm@cmu.edu" }]
keywords = ["design", "research", "agents", "experiments", "analysis", "problems"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "design-research-problems==0.2.1",
  "design-research-agents==0.3.0",
  "design-research-experiments==0.1.2",
  "design-research-analysis==0.1.1",
]

[project.optional-dependencies]
dev = [
  "build>=1.4.2,<2",
  "mypy>=1.20.0,<2",
  "pydata-sphinx-theme>=0.16.1,<1",
  "pre-commit>=4.5.1,<5",
  "pytest>=9.0.2,<10",
  "pytest-cov>=7.1.0,<8",
  "ruff>=0.15.8,<1",
  "sphinx>=9.1.0,<10",
  "sphinx-copybutton>=0.5.2,<1",
  "twine>=6.2.0,<7",
]
problems_grammar = ["design-research-problems[grammar]==0.2.1"]
problems_battery = ["design-research-problems[battery]==0.2.1"]
problems_mcp = ["design-research-problems[mcp]==0.2.1"]
problems_cad = ["design-research-problems[cad]==0.2.1"]
problems_solvers = ["design-research-problems[solvers]==0.2.1"]
problems_pandas = ["design-research-problems[pandas]==0.2.1"]
problems_all = [
  "design-research-problems[grammar,battery,mcp,cad,solvers,pandas]==0.2.1",
]
agents_azure = ["design-research-agents[azure]==0.3.0"]
agents_openai = ["design-research-agents[openai]==0.3.0"]
agents_anthropic = ["design-research-agents[anthropic]==0.3.0"]
agents_gemini = ["design-research-agents[gemini]==0.3.0"]
agents_groq = ["design-research-agents[groq]==0.3.0"]
agents_memory_chroma = ["design-research-agents[memory_chroma]==0.3.0"]
agents_memory_graph = ["design-research-agents[memory_graph]==0.3.0"]
agents_llama_cpp = ["design-research-agents[llama_cpp]==0.3.0"]
agents_transformers = ["design-research-agents[transformers]==0.3.0"]
agents_mlx = ["design-research-agents[mlx]==0.3.0"]
agents_vllm = ["design-research-agents[vllm]==0.3.0"]
agents_sglang = ["design-research-agents[sglang]==0.3.0"]
agents_local = ["design-research-agents[local]==0.3.0"]
agents_providers = ["design-research-agents[providers]==0.3.0"]
agents_full = ["design-research-agents[full]==0.3.0"]
agents_all = [
  "design-research-agents[full,memory_chroma,memory_graph]==0.3.0",
]
analysis_data = ["design-research-analysis[data]==0.1.1"]
analysis_seq = ["design-research-analysis[seq]==0.1.1"]
analysis_embeddings = ["design-research-analysis[embeddings]==0.1.1"]
analysis_lang = ["design-research-analysis[lang]==0.1.1"]
analysis_maps = ["design-research-analysis[maps]==0.1.1"]
analysis_dimred = ["design-research-analysis[dimred]==0.1.1"]
analysis_stats = ["design-research-analysis[stats]==0.1.1"]
analysis_all = ["design-research-analysis[all]==0.1.1"]
examples = ["design-research-agents[llama_cpp]==0.3.0"]
kitchen_sink = [
  "design-research-problems[grammar,battery,mcp,cad,solvers,pandas]==0.2.1",
  "design-research-agents[full,memory_chroma,memory_graph]==0.3.0",
  "design-research-analysis[all]==0.1.1",
]

[project.urls]
Homepage = "https://cmudrc.github.io/design-research/"
Documentation = "https://cmudrc.github.io/design-research/"
Repository = "https://github.com/cmudrc/design-research"
Issues = "https://github.com/cmudrc/design-research/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "design_research._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
design_research = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "examples", "scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]

[tool.mypy]
packages = ["design_research"]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
  "design_research_problems",
  "design_research_problems.*",
  "design_research_agents",
  "design_research_agents.*",
  "design_research_experiments",
  "design_research_experiments.*",
  "design_research_analysis",
  "design_research_analysis.*",
]
ignore_missing_imports = true
